900-clean-up-toolbar alignment and font issue in toolbar fixes

--- a/public/css/rc-style.css
+++ b/public/css/rc-style.css
@@ -985,8 +985,6 @@ footer {
     width: auto;
     margin-right: 10px; }
   .contract-info-section .download-wrap {
-    padding: 2px 0 2px 10px;
-    background-position: -169px -49px;
     text-indent: -9999px; }
   .contract-info-section .dropdown-menu {
     margin-top: 2px; }
@@ -2435,6 +2433,48 @@ input.select2-search__field {
 .pdf-annotator .annotator-hl {
   border: 2px solid #E7D530;
   background: transparent !important; }
+
+.pagination {
+  min-width: 125px;
+  margin: 9px 6px 7px; }
+
+.pdf-pagination.pagination span,
+.pagination input[type="text"] {
+  font-size: 11px;
+  line-height: 17px; }
+
+.pagination input[type="text"] {
+  width: 40px;
+  height: 20px; }
+
+.pdf-zoom-options {
+  padding: 7px 0 8px; }
+  .pdf-zoom-options p {
+    text-indent: -999px;
+    overflow: hidden;
+    height: 19px;
+    width: 23px;
+    vertical-align: middle;
+    background: transparent url(../images/ic-sprite.svg) 0 0 no-repeat;
+    margin: 0 0 0; }
+
+.pdf-zoom-options > .btn-default {
+  width: 20px;
+  height: 20px;
+  line-height: 18px;
+  background: #fff; }
+
+.annotation-sort > .active {
+  background: #F37356; }
+
+.annotation-sort > .active:after {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  left: 45%;
+  border-top: 6px solid #F37356;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent; }
 
 /* ---- style for french language ------- */
 .lang-fr .advance-filter-wrapper .social-share {
