--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -62,6 +62,7 @@ $color_valencia_approx: #d43f3a;
 $color_persian_red_approx: #c9302c;
 $color_mexican_red_approx: #ac2925;
 $mercury: #e5e5e5;
+$img-path: "../images";
 
 //fonts
 $font_0: Open-Sans-Regular;
@@ -1480,8 +1481,6 @@ footer {
     margin-right: 10px;
   }
   .download-wrap {
-    padding: 2px 0 2px 10px;
-    background-position: -169px -49px;
     text-indent: -9999px;
   }
   .dropdown-menu {
@@ -3421,4 +3420,56 @@ input.select2-search__field {
   border :  2px solid #E7D530;
   background: transparent !important
 }
+
+.pagination{
+  min-width: 125px;
+  margin: 9px 6px 7px;
+}
+
+.pdf-pagination.pagination  span,
+.pagination input[type="text"]{
+    font-size: 11px;
+    line-height: 17px;
+}
+
+.pagination input[type="text"]{
+  width: 40px;
+  height: 20px;
+}
+
+.pdf-zoom-options{
+  padding: 7px 0 8px;
+
+  p{
+    text-indent: -999px;
+    overflow: hidden;
+    height: 19px;
+    width: 23px;
+    vertical-align: middle;
+    background: transparent url(#{$img-path}/ic-sprite.svg) 0 0 no-repeat;
+    margin: 0 0 0;
+  }
+}
+
+.pdf-zoom-options > .btn-default {
+  width: 20px;
+  height: 20px;
+  line-height: 18px;
+  background: #fff;
+}
+
+.annotation-sort > .active {
+  background: $color_link_color;
+}
+
+.annotation-sort > .active:after {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  left: 45%;
+  border-top: 6px solid $color_link_color;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+}
+
 
